apps/media/whisparr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whisparr
  namespace: media
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - whisparr.benwoodward.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whisparr
          port: 6969
